--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "yash",
   "license": "MIT",
   "dependencies": {
+    "autoprefixer": "^9.5.0",
     "axios": "^0.18.0",
     "concurrently": "^4.1.0",
     "gsap": "^2.1.2",
