--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run dev",
-    "build": "webpack",
+    "start": "concurrently \"node server.js\" \"npm run dev\"",
+    "build": "concurrently \"node server.js\" \"webpack\"",
     "dev": "webpack-dev-server",
     "build:prod": "webpack -p && cp src/app/index.html dist/app/index.html"
   },
@@ -17,15 +17,23 @@
   "dependencies": {
     "autoprefixer": "^9.5.0",
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
+    "cors": "^2.8.5",
     "gsap": "^2.1.2",
+    "http": "0.0.0",
     "lodash": "^4.17.11",
+    "mongodb": "^3.2.2",
+    "mongoose": "^5.5.0",
+    "morgan": "^1.9.1",
     "react": "^16.7.0",
     "react-dice-complete": "^1.0.2",
     "react-dom": "^16.7.0",
     "react-dropdown": "^1.6.4",
     "react-lineto": "^3.1.3",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
