--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "json-loader": "^0.5.7",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.28.1",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.3.1"
   }
 }
