--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"node server.js\" \"npm run dev\"",
-    "build": "concurrently \"node server.js\" \"webpack\"",
+    "build": "webpack",
     "dev": "webpack-dev-server",
-    "build:prod": "webpack -p && cp src/app/index.html dist/app/index.html"
+    "build:prod": "webpack -p && cp src/app/index.html dist/app/index.html",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm run build &&  concurrently --kill-others \"npm run serve\""
   },
   "keywords": [
     "react.js"
@@ -26,6 +27,7 @@
     "mongodb": "^3.2.2",
     "mongoose": "^5.5.0",
     "morgan": "^1.9.1",
+    "nodemon": "^1.19.1",
     "react": "^16.7.0",
     "react-dice-complete": "^1.0.2",
     "react-dom": "^16.7.0",
