--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-lineto": "^3.1.3",
     "react-router-dom": "^5.0.0",
     "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
