--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:prod": "webpack -p && cp src/app/index.html dist/app/index.html",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm run build"
   },
+  "proxy": "http://127.0.0.1:3000",
   "keywords": [
     "react.js"
   ],
@@ -21,6 +22,7 @@
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "cors": "^2.8.5",
+    "express": "^4.17.1",
     "gsap": "^2.1.2",
     "http": "0.0.0",
     "lodash": "^4.17.11",
@@ -36,7 +38,8 @@
     "react-router-dom": "^5.0.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
-    "webpack-hot-middleware": "^2.25.0"
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
