--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"node server\" \"npm run dev\"",
+    "develop": "concurrently \"node server.js\" \"npm run dev\"",
+    "start": "node server.js",
     "build": "webpack",
     "dev": "webpack-dev-server",
     "build:prod": "webpack -p && cp src/app/index.html dist/app/index.html",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm run build && NODE_ENV=production node server"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm run build"
   },
   "proxy": "http://127.0.0.1:3000",
   "keywords": [
@@ -26,7 +27,7 @@
     "gsap": "^2.1.2",
     "http": "0.0.0",
     "lodash": "^4.17.11",
-    "mongodb": "^3.2.2",
+    "mongodb": "^3.2.7",
     "mongoose": "^5.5.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
