--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "develop": "concurrently \"node server.js\" \"npm run dev\"",
+    "develop": "concurrently \"nodemon server.js\" \"npm run dev\"",
     "start": "node server.js",
     "build": "webpack",
     "dev": "webpack-dev-server",
