--- a/package.json
+++ b/package.json
@@ -18,46 +18,47 @@
   "author": "yash",
   "license": "MIT",
   "dependencies": {
-    "autoprefixer": "^9.5.0",
+    "autoprefixer": "^9.7.4",
     "axios": "^0.18.1",
-    "body-parser": "^1.18.3",
-    "concurrently": "^4.1.0",
+    "body-parser": "^1.19.0",
+    "concurrently": "^4.1.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "gsap": "^2.1.2",
+    "gsap": "^2.1.3",
     "http": "0.0.0",
     "lodash": "^4.17.15",
-    "mongodb": "^3.2.7",
-    "mongoose": "^5.5.0",
+    "mongodb": "^3.5.3",
+    "mongoose": "^5.9.1",
     "morgan": "^1.9.1",
-    "nodemon": "^1.19.1",
-    "react": "^16.7.0",
-    "react-dice-complete": "^1.0.2",
-    "react-dom": "^16.7.0",
+    "nodemon": "^1.19.4",
+    "react": "^16.12.0",
+    "react-dice-complete": "^1.2.0",
+    "react-dom": "^16.12.0",
     "react-dropdown": "^1.6.4",
     "react-lineto": "^3.1.3",
-    "react-router-dom": "^5.0.0",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0",
+    "react-router-dom": "^5.1.2",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.5",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^1.0.0",
-    "copy-webpack-plugin": "^5.0.1",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "json-loader": "^0.5.7",
-    "less": "^3.9.0",
+    "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "prettier": "^1.19.1",
     "style-loader": "^0.23.1",
-    "webpack": "^4.28.1",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.3.1"
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
